2013-09-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-ec_p256.c (ecdsa_compute_public): Handle possible
	error (where key_data is the order).

	* src/ec_p256.c (on_the_curve): New.
	(compute_kG, compute_kP): Handle errors.

	* src/jpc.c (jpc_to_ac): Return -1 on error.
	(jpc_add_ac_signed): Handle the case where A=inf.

	* src/modp256.c (modp256_inv): Handle error case.

	* src/bn.c (bn256_cmp): New.

2013-07-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in: Layout change following NeuG.
	(_end): Add alignment of 16.

	* src/neug.c, src/adc.h, src/adc_stm32f103.c: Update from NeuG.

	* src/main.c [DFU_SUPPORT] (main): Fix calling
	flash_erase_all_and_exec.

	* src/openpgp-do.c (gpg_do_write_prvkey, gpg_do_keygen): Fix
	allocated memory handling.  Clean up before free.
	* src/call-rsa.c (modulus_calc, rsa_genkey): Fix removing const.
	* src/call-ec_p256.c (ecdsa_compute_public): Likewise.

2013-07-18  Niibe Yutaka  <gniibe@fsij.org>

	Port to Chopstx.
	* src/Makefile.in: Change for Chopstx.
	* src/configure: Likewise.
	* src/gnuk.h, src/gnuk.ld.in: Likewise.
	* src/ac.c: Include stdint.h and string.h, not ch.h.
	* src/call-rsa.c, src/debug.c, src/flash.c: Likewise.
	* src/call-ec_p256.c, src/usb_desc.c
	* src/openpgp-do.c, src/random.c: Likewise.
	* src/openpgp.c: Likewise.  Use eventflag of Chopstx.
	* src/usb-icc.c: Likewise.
	* src/usb_ctrl.c: Update for Chopstx.
	* src/debug.h: New.
	* src/stdlib.h: Use gnuk_malloc and gnuk_free for malloc/free.
	* src/config.h.in: Move FLASH_PAGE_SIZE in board.h.
	* polarssl/library/aes.c (FT0, FT1, FT2): Export (for sys 2.0).
	* src/main.c (struct stdout, _write, EP3_IN_Callback)
	(EP5_OUT_Callback): Rewrite for Chopstx.  No independent thread
	any more.
	(display_fatal_code, emit_led, display_status_code, led_blink):
	Use primitives of Chopstx.
	(main): Changes for Chopstx.
	(gnuk_malloc_init, sbrk, gnuk_malloc, gnuk_free): New.

2013-06-20  Niibe Yutaka  <gniibe@fsij.org>
